--- a/index.html
+++ b/index.html
@@ -1,101 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplicación Presupuesto</title>
-    <link href="css/estilos.css" rel='stylesheet' />
+    <title>Login with LocalStorage</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
-
-<body onload='cargarApp()'>
-    <div class="cabecero">
-        <div class="presupuesto">
-            <div class="presupuesto_titulo">
-                Presupuesto Disponible
-            </div>
-            <div class="presupuesto_valor" id='presupuesto'>+ 2,000.00</div>
-            <div class="presupuesto_ingreso limpiarEstilos">
-                <div class="presupuesto_ingreso--texto">Ingresos</div>
-                <div class="derecha">
-                    <div class="presupuesto_ingreso--valor" id='ingresos'>+4,000.00</div>
-                    <div class="presupuesto_ingreso--porcentaje">&nbsp;</div>
+<body>
+    <main>
+        <div class="container">
+            <form id="registerForm" method="POST" name="registration" class="form-control" onsubmit="return validateForm();">
+                <div>
+                    <h1>Crear una Cuenta</h1>
+                    <ul>
+                        <li>
+                            <label for="uName">Nombre: </label>
+                            <input type="text" name="nombre" id="nombre" placeholder="Ingrese Nombre">
+                        </li>
+                        <li>
+                            <label for="uEmail">Email: </label>
+                            <input type="email" name="Email" id="uEmail" placeholder="Ingrese Correo electronico." oninput="emailExist(this)" required>
+                        </li>
+                        <li>
+                            <label for="uPassword">Contraseña: </label>
+                            <input type="password" name="Password" id="uPassword" placeholder="Ingrese Contraseña." pattern=".{0}|.{6,}" required>
+                        </li>
+                        <li>
+                            <label for="confirmPassword">Confirmar Contraseña: </label>
+                            <input type="password" name="Confirm Password" id="confirmPassword" placeholder="Confirmar Contraseña." oninput="verifyPassword(this)" required>
+                        </li>
+                        <li>
+                            <button type="submit" id="submit">Enviar</button>
+                            <span>¿Ya tienes una cuenta? <a href="javascript:void(0);" onclick="showHide('logIn', 'registerForm')">Ingresar Sesión Ahora</a></span>
+                        </li>
+                    </ul>
                 </div>
-            </div>
-            <div class="presupuesto_egreso limpiarEstilos">
-                <div class="presupuesto_egreso--texto">Egresos</div>
-                <div class="derecha limpiarEstilos">
-                    <div class="presupuesto_egreso--valor" id='egresos'>- 1,900.00</div>
-                    <div class="presupuesto_egreso--porcentaje" id="porcentaje">45%</div>
+            </form>
+            <form id="thankYou" class="form-control" style="display: none;">
+                <div style="text-align: center">
+                    <h1>Gracias!</h1>
+                    <p>Satisfactoriamente estas registrado con nosotros. Tu puedes <a href="javascript:void(0);" onclick="showHide('logIn', 'thankYou')">Iniciar Sesión Ahora</a></p>
                 </div>
+            </form>
+            <form name="login" id="logIn" method="POST" class="form-control" onsubmit="return loginUser()" style="display: none;">
+                <div>
+                        <h1>Iniciar Sesión</h1>
+                <ul>
+                    <li>
+                        <label for="uName">Usuario:</label>
+                        <input type="text" name="uName" id="uName" placeholder="Ingrese usuario" required>
+                    </li>
+                    <li>
+                            <label for="ePassword">Contraseña</label>
+                            <input type="password" name="ePassword" id="ePassword" placeholder="Ingrese Contraseña" required>
+                        </li>
+                        <li>
+                                <button type="submit" id="login">Iniciar Sesión</button>
+                                <span>¿Eres Nuevo Aquí? <a href="javascript:void(0);" onclick="showHide('registerForm','logIn')">Registrar Ahora</a></span>
+                            </li>
+                </ul>
             </div>
+            </form>
         </div>
-    </div>
-
-    <form id="forma" onsubmit="return false;">
-        <div class="agregar">
-            <div class="agregar_contenedor">
-                <select class="agregar_tipo" id="tipo">
-                    <option value="ingreso" selected>+</option>
-                    <option value="egreso">-</option>
-                </select>
-                <input type="text" class="agregar_descripcion"
-                placeholder="Agregar Descripcion" id="descripcion" />
-                <input type="number" class="agregar_valor"
-                placeholder="Valor" id="valor" step="any"/>
-                <button class="agregar_btn" onclick="agregarDato()">
-                    <ion-icon name="checkmark-circle-outline"></ion-icon>
-                </button>
-            </div>
-        </div>
-    </form>
-
-
-    <div class="contenedor limpiarEstilos">
-        <div class="ingreso">
-            <h2 class="ingreso_titulo">Ingresos</h2>
-            <div id="lista-ingresos">
-                
-            </div>
-        </div>
-        <div class="egreso">
-            <h2 class="egreso_titulo">Egresos</h2>
-            <div id="lista-egresos">
-                <div class="elemento limpiarEstilos">
-                    <div class="elemento_descripcion">Renta Departamento</div>
-                    <div class="derecha limpiarEstilos">
-                        <div class="elemento_valor">- 900</div>
-                        <div class="elemento_porcentaje">21%</div>
-                        <div class="elemento_eliminar">
-                            <button class="elemento_eliminar--btn">
-                                <ion-icon name="close-circle-outline"></ion-icon>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="elemento limpiarEstilos">
-                    <div class="elemento_descripcion">Ropa</div>
-                    <div class="derecha limpiarEstilos">
-                        <div class="elemento_valor">- 400</div>
-                        <div class="elemento_porcentaje">10%</div>
-                        <div class="elemento_eliminar">
-                            <button class="elemento_eliminar--btn">
-                                <ion-icon name="close-circle-outline"></ion-icon>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src='js/Dato.js'></script>
-    <script src='js/Ingreso.js'></script>
-    <script src='js/Egreso.js'></script>
-    <script src='js/app.js'></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    </main>
+    <script type="text/javascript" src="js/login.js"></script>
 </body>
-
 </html>
